2000-12-22  Jochen Wiedmann  <joe@ispsoft.de> (0.1025)

	* lib/DBD/CSV.pm (fetch_row): Now cleaning $! before
	  calling $csv->getline(). Seems to return false errors
	  otherwise in some cases. Jeremy Wadsack
	  <jwadsack@wadsack-allen.com>
	* Made Makefile.PL CPAN conformant.
	* Removed unnecessary stuff in Makefile.PL which verified
	  the DBI installation.

2000-07-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1023)

	* lib/DBD/File.pm (STORE): Changed croak to die.
	  Guido Flohr <guido@imperia.westend.com>	  

2000-07-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1023)

	* Minor fix in the docs, thanks to Andreas Grupp,
	  grupp@elektronikschule.de.
	* Minor compatibility fixes in the test suite for
	  Perl 5.6.

1999-10-07  Jochen Wiedmann  <joe@ispsoft.de> (0.1022)

	* lib/DBD/File.pm (connect): In the DSN, \ was removed in
	  all cases. It is now possible to use \\ for a DSN
	  containing a backslash, for example f_dir=C:\\tmp.
	  Suggested by Giuliano Cioffi <g.cioffi@piemme.it>.
	* lib/DBD/CSV.pm: Lots os minor POD patches, thanks to
          Adam Di Carlo <adam@onshore.com>.
	* lib/DBD/CSV.pm: More POD patches, thanks to
          Timothy F Armbruster <tfarmbruster@notes.west.raytheon.com>.

1999-05-10  Jochen Wiedmann  <joe@ispsoft.de> (0.1021)

	* lib/DBD/CSV.pm (push_row): Fixed typo in docs where DBI:File:
	  was used instead of DBI:CSV: (Mitra <mitra@earth.path.net>)
	* lib/DBD/CSV.pm (fetch_row): An undef result from $csv->getline()
	  was sometimes handled incorrectly. Thanks to Syed Muhammad Nayeem
	  <smnayeem@dhaka.agni.com>.
	* lib/DBD/File.pm: Removed use of flock under Win95.

1999-03-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1020)

	* lib/DBD/File.pm (FETCH): Simplified handling of $sth->{'NAME'}
	  due to a change in SQL::Statement 0.1011. (Teun Burgers,
	  Teun Burgers <burgers@ecn.nl>)

1999-02-11  Jochen Wiedmann  <joe@ispsoft.de> (0.1019)

	* Makefile.PL (CheckModule): Now requires Text::CSV_XS 0.16, due
	  to an imcompatible change.
